# FscanGUI

./: README.md  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/androidTest/java/com/ayssu/fscangui/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/ImGui/: imconfig.h  imgui.h  imguipp.h
app/src/main/cpp/include/ImGuiInEGL/: ImGuiInEGL.h
app/src/main/cpp/include/ImGuiInput/: ImGuiInPut.h
app/src/main/cpp/src/: ImGuiMain.cpp
app/src/main/cpp/src/ImGui/: imgui.cpp  imgui_draw.cpp  imgui_widgets.cpp  imguipp.cpp
app/src/main/cpp/src/ImGuiInEGL/: ImGuiInEGL.cpp
app/src/main/cpp/src/ImGuiInput/: ImGuiInPut.cpp
app/src/main/java/com/ayssu/fscangui/: MainActivity.kt
app/src/main/java/com/ayssu/fscangui/service/: FloatService.kt
app/src/main/java/com/ayssu/fscangui/utils/: JNIInterface.kt
app/src/main/java/com/ayssu/fscangui/view/: SurfaceView.kt  TouchView.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ayssu/fscangui/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
